{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 27,
  "lineage": "0ba01c65-4344-b5a8-f72f-c825a1819a2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:loadbalancer/app/production-app-alb/2758e9e65e069579",
            "arn_suffix": "app/production-app-alb/2758e9e65e069579",
            "dns_name": "production-app-alb-484629725.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:loadbalancer/app/production-app-alb/2758e9e65e069579",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "production-app-alb",
            "security_groups": [
              "sg-03484a53b548f4fc5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09b4fc3f6fa01b8cc"
              },
              {
                "subnet_id": "subnet-0c7df80f0d0de8ee7"
              }
            ],
            "subnets": [
              "subnet-09b4fc3f6fa01b8cc",
              "subnet-0c7df80f0d0de8ee7"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-08f98d487a90737f0",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb_sec_group",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:listener/app/production-app-alb/2758e9e65e069579/7718387b3413b692",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:targetgroup/production-alb-target-group/933c5f345581b0d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:listener/app/production-app-alb/2758e9e65e069579/7718387b3413b692",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:loadbalancer/app/production-app-alb/2758e9e65e069579",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.app_alb",
            "aws_alb_target_group.alb_target_group",
            "aws_security_group.alb_sec_group",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:targetgroup/production-alb-target-group/933c5f345581b0d7",
            "arn_suffix": "targetgroup/production-alb-target-group/933c5f345581b0d7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:targetgroup/production-alb-target-group/933c5f345581b0d7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "production-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08f98d487a90737f0"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:581590935060:instance/i-0e2dc6201b3ffc36c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2dc6201b3ffc36c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pf6-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed10a8a3c6c39b79",
            "private_dns": "ip-10-20-0-75.eu-west-1.compute.internal",
            "private_ip": "10.20.0.75",
            "public_ip": "52.48.95.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0093777fbb3a33679",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7df80f0d0de8ee7",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05621488f6fd4c1b3"
            ]
          },
          "dependencies": [
            "data.aws_ami.linux_vm",
            "aws_security_group.alb_sec_group",
            "aws_security_group.app_sec_group",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:581590935060:instance/i-0c0fc3cf087a37620",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0fc3cf087a37620",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pf6-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06431839f8d01a0d7",
            "private_dns": "ip-10-20-1-124.eu-west-1.compute.internal",
            "private_ip": "10.20.1.124",
            "public_ip": "54.229.91.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd31db28f0a193f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b4fc3f6fa01b8cc",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05621488f6fd4c1b3"
            ]
          },
          "dependencies": [
            "aws_security_group.app_sec_group",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.linux_vm",
            "aws_security_group.alb_sec_group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:581590935060:instance/i-0f33061bccaef85e4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f33061bccaef85e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pf6-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0af59958bd1f5d015",
            "private_dns": "ip-10-20-0-18.eu-west-1.compute.internal",
            "private_ip": "10.20.0.18",
            "public_ip": "52.212.62.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00db3e712d84912e1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7df80f0d0de8ee7",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05621488f6fd4c1b3"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sec_group",
            "aws_security_group.app_sec_group",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.linux_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:internet-gateway/igw-0b0e28f60933bfe21",
            "id": "igw-0b0e28f60933bfe21",
            "owner_id": "581590935060",
            "vpc_id": "vpc-08f98d487a90737f0"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_reg_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:targetgroup/production-alb-target-group/933c5f345581b0d7-20210529155415699300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:targetgroup/production-alb-target-group/933c5f345581b0d7",
            "target_id": "i-0e2dc6201b3ffc36c"
          },
          "dependencies": [
            "aws_security_group.alb_sec_group",
            "aws_security_group.app_sec_group",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.linux_vm",
            "aws_alb_target_group.alb_target_group",
            "aws_instance.app_servers"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:targetgroup/production-alb-target-group/933c5f345581b0d7-20210529155415774600000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:targetgroup/production-alb-target-group/933c5f345581b0d7",
            "target_id": "i-0c0fc3cf087a37620"
          },
          "dependencies": [
            "aws_alb_target_group.alb_target_group",
            "aws_instance.app_servers",
            "aws_security_group.alb_sec_group",
            "aws_security_group.app_sec_group",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.linux_vm"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:targetgroup/production-alb-target-group/933c5f345581b0d7-20210529155415750700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:581590935060:targetgroup/production-alb-target-group/933c5f345581b0d7",
            "target_id": "i-0f33061bccaef85e4"
          },
          "dependencies": [
            "aws_security_group.app_sec_group",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.linux_vm",
            "aws_alb_target_group.alb_target_group",
            "aws_instance.app_servers",
            "aws_security_group.alb_sec_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b0e28f60933bfe21",
            "id": "r-rtb-0947506741f0574531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0947506741f057453",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc",
            "aws_internet_gateway.app_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:security-group/sg-03484a53b548f4fc5",
            "description": "Terraform load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03484a53b548f4fc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_alb_security_group",
            "name_prefix": "",
            "owner_id": "581590935060",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f98d487a90737f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:security-group/sg-05621488f6fd4c1b3",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05621488f6fd4c1b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03484a53b548f4fc5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "581590935060",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f98d487a90737f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sec_group",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:security-group/sg-0f934151ff0f1165c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f934151ff0f1165c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05621488f6fd4c1b3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20210529154308169400000001",
            "name_prefix": "terraform-",
            "owner_id": "581590935060",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f98d487a90737f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sec_group",
            "aws_security_group.app_sec_group",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:subnet/subnet-0c7df80f0d0de8ee7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.0.0/24",
            "id": "subnet-0c7df80f0d0de8ee7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "581590935060",
            "vpc_id": "vpc-08f98d487a90737f0"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:subnet/subnet-09b4fc3f6fa01b8cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-09b4fc3f6fa01b8cc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "581590935060",
            "vpc_id": "vpc-08f98d487a90737f0"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:subnet/subnet-0681c23bee0b3c16d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0681c23bee0b3c16d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "581590935060",
            "vpc_id": "vpc-08f98d487a90737f0"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:subnet/subnet-02e6bdb04d32fa6f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-02e6bdb04d32fa6f6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "581590935060",
            "vpc_id": "vpc-08f98d487a90737f0"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:vpc/vpc-08f98d487a90737f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0e3a81198e0788820",
            "default_route_table_id": "rtb-0947506741f057453",
            "default_security_group_id": "sg-01b3cbe98a84d0434",
            "dhcp_options_id": "dopt-87322ee1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08f98d487a90737f0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0947506741f057453",
            "owner_id": "581590935060"
          }
        }
      ]
    }
  ]
}